feat(core): 更新项目配置和依赖
- 将入口文件从 src/index.ts 更改为 src/main.ts
- 添加 build、start 等构建脚本
- 集成 typebox、cheerio、dotenv 等新依赖库
- 升级 elysia 到固定版本 1.4.21
- 添加 node-cron、ws 等服务端功能依赖
- 补充开发依赖如 @types/node、@types/ws 等
- 完善 package.json 中的描述信息和关键词
- 配置 main 入口和许可证信息

--- a/package.json
+++ b/package.json
@@ -2,14 +2,39 @@
   "name": "azhot-ts",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/main.ts",
+    "start": "bun run src/main.ts",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "elysia": "latest"
+    "typebox": "^1.0.75",
+    "cheerio": "^1.1.2",
+    "dotenv": "^17.2.3",
+    "elysia": "1.4.21",
+    "exact-mirror": "^0.2.6",
+    "node-cron": "4.2.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.5",
+    "@types/node": "^25.0.3",
+    "@types/node-cron": "^3.0.11",
+    "@types/ws": "^8.18.1",
     "bun-types": "latest"
   },
-  "module": "src/index.js"
+  "module": "src/main.js",
+  "description": "一个提供各大平台热搜API的聚合服务",
+  "main": "src/main.js",
+  "keywords": [
+    "api",
+    "hot-search",
+    "web-scraping",
+    "elysia",
+    "typescript"
+  ],
+  "author": "azhot",
+  "license": "AGPL-3.0"
 }
