chore(build): 更新构建配置并忽略 Qodana 配置文件
- 在 .gitignore 中添加 qodana.yaml 忽略规则
- 从 package.json 中移除默认测试脚本配置
- 保持 bun.lock 文件继续被忽略

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "bun run --watch src/main.ts",
     "start": "bun run src/main.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "dependencies": {
     "typebox": "^1.0.75",
