refactor(crawlers): 移除爬虫相关功能模块
- 删除了 AcFunCrawler.js 文件及其相关实现
- 删除了 api-routes.js 文件及所有平台配置信息
- 移除了百度、哔哩哔哩、CCTV等多个爬虫实现文件
- 清理了 BaseCrawler 基础类及相关工具函数
- 删除了缓存管理模块和爬虫管理器
- 更新 .gitignore 文件以忽略构建输出和临时文件

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.50",
   "scripts": {
     "dev": "bun run --watch src/main.ts",
-    "start": "bun run src/main.ts",
+    "start": "bun run dist/main.js",
     "build": "tsc",
     "prepare": "husky"
   },
   "dependencies": {
+    "@elysiajs/cron": "^1.4.1",
     "@elysiajs/openapi": "^1.4.13",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
@@ -29,9 +30,9 @@
     "lint-staged": "^16.2.7",
     "prettier": "3.7.4"
   },
-  "module": "src/main.js",
+  "module": "dist/main.js",
   "description": "一个提供各大平台热搜API的聚合服务",
-  "main": "src/main.js",
+  "main": "dist/main.js",
   "keywords": [
     "api",
     "hot-search",
