--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,34 @@
 # Dependencies
 node_modules/
+
+# Build output
+dist/
+!dist/**
+
+# Runtime data
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+.DS_Store
+
 # Production
-dist/
 build/
 .next/
 nuxt/
